discussion/kv_engine/183328/183328_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Expose the NoBucketTaskable to use in the quota sharing pager

The quota sharing item pager will need a common synchronisation point.
It makes sense to use the NoBucketTaskable for that, as it is outlives
all buckets. A custom taskable defined in ep-engine would not get
unregistered before the ExecutorPool is shutdown (the executor pool is
created in daemon/memcached.cc).

This change exposes the NoBucketTaskable as an ExecutorPool's "default"
taskable.

Change-Id: I229b6949cce27334e5106aad0a31f5500c1d6ae6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-28 22:58:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-29 00:49:35.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43046/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/executorpool.h:140:9:
error: use of undeclared identifier "Expects"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43046/ )

CMake error: CMakeLists.txt:170 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43046/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21995/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/executorpool.h:140:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(!defaultTaskable);
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21995/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/executorpool.h:140:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21995/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23521/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23521/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11721/ : FAILURE

Compile error at [2022-11-28T23:35:08.067Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/executor/executorpool.h:140:9:
error: use of undeclared identifier "Expects"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11721/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25307/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25307/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32458/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32458/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51280/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21497/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11811/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/753/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24454/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24041/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
